# copier-python-package-template

./: .copier-answers.yml  .pre-commit-config.yaml  AGENTS.md  README.md  copier.yml  mutex_queue  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json  docker-compose.yml  install-ci-tooling.py  manual-setup-deps.py  manual-setup-deps.sh  on-create-command.sh  post-start-command.sh
.github/: dependabot.yml  renovate.json5
.github/reusable_workflows/: build-docker-image.yaml
.github/workflows/: checks.yaml  ci.yaml  dependabot-post-update.yaml  get-values.yaml  hash_git_files.py  replace_private_package_registries.py  tag-on-merge.yaml  update-devcontainer-hash.yaml
copier_template_resources/: git_tag.py  vcrpy_fixtures.py
copier_template_resources/python_asyncio/: asyncio_fixtures.py  background_tasks.py
extensions/: context.py
src/copier_tasks/: remove_precommit_hooks.py
template/: .pre-commit-config.yaml  .readthedocs.yaml.jinja  AGENTS.md  README.md.jinja  pyproject.toml.jinja
template/.devcontainer/: Dockerfile  code-artifact-auth.sh.jinja  create-aws-profile.sh.jinja  devcontainer.json.jinja  docker-compose.yml.jinja  install-ci-tooling.py.jinja  manual-setup-deps.py  manual-setup-deps.sh.jinja  on-create-command.sh.jinja  post-start-command.sh.jinja
template/.github/: dependabot.yml.jinja
template/docs/: conf.py.jinja
template/src/: {% if is_frozen_executable %}entrypoint.py{% endif %}.jinja
template/{% if create_docs %}docs{% endif %}/: conf.py.jinja
tests/copier_data/: data1.yaml  data2.yaml  data3.yaml
(+18 files in other folders)
